--- a/dorian-ui/package.json
+++ b/dorian-ui/package.json
@@ -9,19 +9,20 @@
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
-    "framer-motion": "^10.16.16",
+    "blockly": "^10.4.3",
+    "framer-motion": "^10.18.0",
     "lucide-react": "^0.263.1",
-    "blockly": "^10.3.0",
-    "react-blockly": "^8.0.0"
+    "react": "^18.2.0",
+    "react-blockly": "^8.0.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.30.3",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.0.8",
-    "eslint": "^8.55.0"
+    "eslint": "^8.55.0",
+    "vite": "^5.0.8"
   }
 }
