--- a/dorian/server/package.json
+++ b/dorian/server/package.json
@@ -8,13 +8,16 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "bcrypt": "^6.0.0",
+    "better-sqlite3": "^12.6.2",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "googleapis": "^129.0.0",
     "groq-sdk": "^0.37.0",
-    "express-session": "^1.17.3",
-    "body-parser": "^1.20.2"
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
