--- a/dorian/server/package.json
+++ b/dorian/server/package.json
@@ -16,8 +16,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "googleapis": "^129.0.0",
-    "groq-sdk": "^0.37.0",
-    "uuid": "^13.0.0"
+    "groq-sdk": "^0.37.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
